--- a/xueqiu/templates/stock_list.html
+++ b/xueqiu/templates/stock_list.html
@@ -2,6 +2,7 @@
         {% for stock in stock_list %}
             <tr>
                 <td>{{ stock.name }}</td>
+                <td>{{ stock.stock_number }}</td>
                 <td>{{ stock.followers_number }}</td>
                 <td>{{ stock.new_followers_number }}</td>
                 <td>{{ stock.value_increased_percent }}</td>
